app/assets/stylesheets/components/user/profile/profile_index.scss
.profile_index {
    display: flex; 
    flex-direction: column; 
    align-items: flex-start; 
    justify-content: flex-start; 
    margin: 0.5rem 2rem 0.5rem 2rem;  
}

.profile_index-row {
    display: flex; 
    flex-direction: row; 
}

.profile_index-item {
    display: flex; 
    flex-direction: row; 
    width: 25vw; 
    margin: 0.5rem; 
    padding: 0.5rem; 
    border: 1px dotted gray; 
}

.profile_index-tags {
    display: flex; 
    flex-direction: row; 
    font-size: $comment-size; 
}

.profile_index-tag {
    padding-left: 0.1rem; 
    padding-right: 0.1rem; 
}

